examples/vite/src/index.scss
@layer stream-new, stream-new-plugins, stream-overrides, stream-app-overrides;

@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');

// v3 CSS import
@import url('stream-chat-react/dist/css/index.css') layer(stream-new);
@import url('./AppSettings/AppSettings.scss') layer(stream-app-overrides);
@import url('./CustomMessageActions/CustomMessageActions.scss')
layer(stream-app-overrides);
@import url('./SystemNotification/SystemNotification.scss') layer(stream-app-overrides);
@import url('stream-chat-react/dist/css/emoji-picker.css') layer(stream-new-plugins);

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100vh;
  min-height: 0;
}
/* ... */

